--- a/Selenium_HybridFramework_GH/README
+++ b/Selenium_HybridFramework_GH/README
@@ -1,6 +1,51 @@
-Created a Hybrid Framework using Selenium & Java.
-Created a single test case GoogleTest. The test case steps & test data are stored in TestCase2.xls file. (which is in testexecution floder)
-I'm using TestNG @DataProvider. It retrieves testdata for testcase "GoogleTest"
-Test Steps contained Keywords. Each Keyword represents a test step. All Keyword related functions are stored in "Keywords_Run.java" class. Later, called this class & its methods to execute all my Keywords/test steps. 
+Hybrid Framework: It is a combination of Keyword & Data Driven Framework. 
+All test cases, test steps & Test data are stored in excel sheet. And excel is stored in testexecution folder.
+Object Repository file is in repository folder. This file have “locator values” for each Object. 
+Framework contains two packages. Test case package & utility package.
+Testcase package contains all test cases files. (For ex: GoogleTest.java)
+Utility package contains all utility files (explained in below sections). 
 
-Note: Object Repository is in repository folder.
+Lets look what “GoogleTest” case does:
+1: Creates a WebDriver and launches Firefox browser
+2: navigates to www.google.com 
+3: In google home page, In Search Textfield box, pass keyword “Selenium”
+4: Click on Search button.
+Note: I added only one test case and I need to add many more to cover various selenium concepts.
+
+Utility package: It has below files. 
+- DataProviderAnnotation.java. 
+- Keywords_Run.java
+- TestData_Utilities.java
+- Get_Xls.java
+
+Utility Files:
+1: DataProviderAnnotation.java: 
+This class has @DataProvider annotation,  this return multidimensional object. We use this annotation to retrieve “Test Data” in “keyValue parameter”. 
+1: @DataProvider Annotation required two parameters. One is "TestCase"File Path & TestCaseName. For these two tasks, we create an Object & a constructor.  
+2: Creating an object for Xls_Reader class constructor. Which means, if you look at Xls_Reader.java constructor's code, it required a complete FilePath. Here we are creating an object by passing complete filepath.
+3: Creating a constructor. This constructor will be used by "TestCase" classes. Basically, TestCase class's constructor forward testcasename through constructor.
+ 
+2: Keywords_Run.java:
+1: This class contains a method which is used to performs/executes all Keywrods methods. 
+For ex: If user writes, openBrowser Keyword in "testcase excel sheet", the associated openBrowser() method will be executed here.
+2: executeKeywords() Method: This calls, many small methods like openbrowser(), navigate(), clickByXpath() & inputbyid(). 
+
+3: TestData_Utilities.java: This file have two methods.
+1: isExecutableFromTestCasesSheet : Verifies in Test Cases Sheet: It verifies, if Runmode set to "Y"
+2: returnTestData : Retrive Test Data in "Key Value" parameter from TestData Sheet for a given TestCase
+ 
+4: Get_Xls.java: This file has many methods to perform actions on Excel application.
+
+Let see the “Test case execution” here: 
+1: For given “Test case”, first, we need to retrieve  test steps & test data from Excel sheet.
+2: Test Steps needs test data. Hence first, we need to retrieve “Test data”.
+3: Later, we need to pass test data inside test steps. 
+4: “DataProviderAnnotation.java” class contains @DataProvider annotation, which returns “Test data” in multidimensional array (Object). 
+5: Method “” executes for each Keyword, Object & TestData. In this method, we pass above retrierved TestData. This method executes each Test step and returns results :)
+
+Now, lets see “How to add a new Test case to framework”:
+1: Addnew Test case name, and with its  “Test steps” & with its “Test data”
+2: In “Testing.TestCases package”,  Create a small .java class for this Test case (for ex: GoogleTest.java)
+3: If you add new Keywords in “TestSteps” sheet, then you need to add new keyword methods() in Keywords_Run.java & then update method “executeKeywords()”.
+
+
